--- a/.github/workflows/worker-call.yaml
+++ b/.github/workflows/worker-call.yaml
@@ -4,7 +4,6 @@ on: workflow_dispatch
 # https://docs.github.com/en/actions/deployment/security-hardening-your-deployments/configuring-openid-connect-in-cloud-providers#adding-permissions-settings
 permissions:
   id-token: write
-
 jobs:
   build:
      runs-on: ubuntu-latest
@@ -24,4 +23,21 @@ jobs:
        - name: Connectivity check
          run: |
            jf rt ping
-           jf atc --reference=true --expiry=600 --description="Token for Worker demo. Owner davidro" --grant-admin=true workerci-davidro
+           JFROG_ACCESS_TOKEN=$(jf atc --reference=true --expiry=600 --description="Token for Worker demo. Owner davidro" --grant-admin=true workerci-davidro | jq .reference_token | tr -d '"')
+           echo "JFROG_ACCESS_TOKEN=${JFROG_ACCESS_TOKEN}" >> $GITHUB_ENV
+       - name: Call Custom Worker endpoint
+         uses: fjogeleit/http-request-action@v1
+         id: workerExecutionRequest
+         with:
+            url: "${{ secrets['JF_URL'] }}/worker/api/v1/execute/droActiveUsers"
+            method: 'POST'
+            escapeData: 'true'
+            bearerToken: "${{env.JFROG_ACCESS_TOKEN}}"
+            customHeaders: '{"Content-Type": "application/json"}'
+            data: |
+              {
+                "foo": "bar"
+              }
+       - name: Show Execution response
+         run: |
+           echo ${{ steps.workerExecutionRequest.outputs.response }}
