get another JWT OIDC token

--- a/.github/workflows/worker-call.yaml
+++ b/.github/workflows/worker-call.yaml
@@ -40,7 +40,7 @@ jobs:
             customHeaders: '{"Content-Type": "application/json"}'
             data: |
               {
-                "foo": "bar"
+                "OIDC_TOKEN": "${{env.OIDC_TOKEN}}"
               }
        - name: Show Execution response
          run: |
